--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,13 @@
 /target
-/lib
 /classes
 /checkouts
+/out
+/repl
+/resources/public/js
+/resources/public/out
 pom.xml
 pom.xml.asc
 *.jar
 *.class
-.lein-deps-sum
-.lein-failures
-.lein-plugins
-.lein-repl-history
-.nrepl-port
+/.lein-*
+/.nrepl-port
